--- a/activities.html
+++ b/activities.html
@@ -17,12 +17,18 @@
                 <div id="trailhero"></div>
                 <main>
                     <h2>Activities at Pacific Trails</h2>
-                    <h3>Hiking</h3>
-                    <p><span class="resort">Pacific Trails Resort</span> has 5 miles of hiking trails and is adjacent to a state park. Go it alone or join one of our guided hiking.</p>
-                    <h3>Kayaking</h3>
-                    <p>Ocean kayaks are available for guest use.</p>
-                    <h3>Bird Watching</h3>
-                    <p>While anytime is a good time for bird watching at Pacific Trails, we offer guided birdwatching trips at sunrise several times a week.</p>
+                    <section>
+                        <h3>Hiking</h3>
+                        <p><span class="resort">Pacific Trails Resort</span> has 5 miles of hiking trails and is adjacent to a state park. Go it alone or join one of our guided hiking.</p>
+                    </section>
+                    <section>
+                        <h3>Kayaking</h3>
+                        <p>Ocean kayaks are available for guest use.</p>
+                    </section>
+                    <section>
+                        <h3>Bird Watching</h3>
+                        <p>While anytime is a good time for bird watching at Pacific Trails, we offer guided birdwatching trips at sunrise several times a week.</p>
+                    </section>
                 </main>
                 <footer>
                     <small>
