--- a/index.html
+++ b/index.html
@@ -9,15 +9,23 @@
     <body>
       <header>
         <h1>
-          Pacific Trails Resort
+          <a href="index.html">Pacific Trails Resort</a> 
         </h1>
       </header>
+
+
+
         <nav>
-            <a href="index.html">Home</a> &nbsp;
-            <a href="yurts.html">Yurts</a> &nbsp;
-            <a href="activities.html">Activities</a> &nbsp;
-            <a href="reservations.html">Reservations</a> &nbsp;
+          <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="yurts.html">Yurts</a></li>
+          <li><a href="activities.html">Activities</a></li>
+          <li><a href="reservations.html">Reservations</a></li>
+          </ul>
         </nav>
+        <div id="wrapper">
+
+
         <div id="homehero"> </div>
       <main>
         <h2>Enjoy Nature in Luxury</h2>
