--- a/yurts.html
+++ b/yurts.html
@@ -16,25 +16,29 @@
                 </nav>
                 <main>
                     <h2>The Yurts at Pacific Trails</h2>
-                    <dl>
-                        <dt>What is a Yurt?</dt>
-                        <dd>Our luxury yurts are permanent structures 
+                    <section>
+                        <dt><h3>What is a Yurt?</h3></dt>
+                        <dd><p>Our luxury yurts are permanent structures 
                             four feet off the ground. Each yurt has canvas 
                             walls, a wooden floor, a roof dome that can be 
-                            opened, and a private deck.</dd>
-                        <dt>How are the Yurts Furnished?</dt>
-                        <dd>Each yurt is furnished with a gas fireplace, 
+                            opened, and a private deck.</p></dd>
+                        </section>
+                        <section>
+                        <dt><h3>How are the Yurts Furnished?</h3></dt>
+                        <dd><p>Each yurt is furnished with a gas fireplace, 
                             king-size bed with down quilt, comfy couch, dining 
                             table and chairs, mini-fridge, microwave, and coffee 
                             maker. Your luxury camping experience includes a sink 
                             with hot and cold running water. Shower and restroom 
-                            facilities are located in the lodge.</dd>
-                        <dt>What Should I bring?</dt>
-                        <dd>Most guests pack comfortable walking shoes and plan 
+                            facilities are located in the lodge.</p></dd>
+                        </section>
+                        <section>
+                        <dt><h3>What Should I bring?</h3></dt>
+                        <dd><p>Most guests pack comfortable walking shoes and plan 
                             to dress for changing weather with light layers of 
                             clothing. It's also helpful to bring a flashlight 
-                            and a sense of adventure!</dd>
-                    </dl>
+                            and a sense of adventure!</p></dd>
+                        </section>
                 </main>
                 <footer>
                     <small>
