--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="pacific.css">
     <title> Minton | Pacific Trails Resort</title>
   </head>
-  <div id="wrapper">
     <body>
       <header>
         <h1>
@@ -23,6 +23,9 @@
           <li><a href="reservations.html">Reservations</a></li>
           </ul>
         </nav>
+        <div id="wrapper">
+          <a id="mobile" href="tel:888-555-5555">888-555-5555</a>
+          <span id="desktop">888-555-5555</span>
         <div id="wrapper">
 
 
