--- a/yurts.html
+++ b/yurts.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <link rel="stylesheet" href="pacific.css">
     <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pacific Trails Resort :: Yurts</title>
     </head>
-        <div id="wrapper">
             <body>
                 <nav>
                     <b>
@@ -14,31 +14,39 @@
                     <a href="reservations.html">Reservations</a> &nbsp;
                     </b>
                 </nav>
+                <div id="wrapper">
                 <main>
                     <h2>The Yurts at Pacific Trails</h2>
-                    <section>
-                        <dt><h3>What is a Yurt?</h3></dt>
-                        <dd><p>Our luxury yurts are permanent structures 
-                            four feet off the ground. Each yurt has canvas 
-                            walls, a wooden floor, a roof dome that can be 
-                            opened, and a private deck.</p></dd>
-                        </section>
-                        <section>
-                        <dt><h3>How are the Yurts Furnished?</h3></dt>
-                        <dd><p>Each yurt is furnished with a gas fireplace, 
-                            king-size bed with down quilt, comfy couch, dining 
-                            table and chairs, mini-fridge, microwave, and coffee 
-                            maker. Your luxury camping experience includes a sink 
-                            with hot and cold running water. Shower and restroom 
-                            facilities are located in the lodge.</p></dd>
-                        </section>
-                        <section>
-                        <dt><h3>What Should I bring?</h3></dt>
-                        <dd><p>Most guests pack comfortable walking shoes and plan 
-                            to dress for changing weather with light layers of 
-                            clothing. It's also helpful to bring a flashlight 
-                            and a sense of adventure!</p></dd>
-                        </section>
+                        <div id="flow"></div>    
+                            <section>
+                            <dt><h3>What is a Yurt?</h3></dt>
+                            <dd><p>Our luxury yurts are permanent structures 
+                                four feet off the ground. Each yurt has canvas 
+                                walls, a wooden floor, a roof dome that can be 
+                                opened, and a private deck.</p></dd>
+                            </section>
+                        </div>   
+                        <div id="flow">
+                            <section>
+                            <dt><h3>How are the Yurts Furnished?</h3></dt>
+                            <dd><p>Each yurt is furnished with a gas fireplace, 
+                                king-size bed with down quilt, comfy couch, dining 
+                                table and chairs, mini-fridge, microwave, and coffee 
+                                maker. Your luxury camping experience includes a sink 
+                                with hot and cold running water. Shower and restroom 
+                                facilities are located in the lodge.</p></dd>
+                            </section>
+                        </div>
+                        <div id="flow">
+                            <section>
+                            <dt><h3>What Should I bring?</h3></dt>
+                            <dd><p>Most guests pack comfortable walking shoes and plan 
+                                to dress for changing weather with light layers of 
+                                clothing. It's also helpful to bring a flashlight 
+                                and a sense of adventure!</p></dd>
+                            </section>
+                        </div>
+                        </main>
                 </main>
                 <footer>
                     <small>
