--- a/yurts.html
+++ b/yurts.html
@@ -46,8 +46,33 @@
                                 and a sense of adventure!</p></dd>
                             </section>
                         </div>
+                            <table>
+                                    <tr>
+                                        <td>Package Name</td>
+                                        <td>Description</td>
+                                        <td>Nights</td>
+                                        <td>Cost per Person</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Weekend Escape</td>
+                                        <td class="text">Two breakfasts, a trail map, a picnic snack</td>
+                                        <td>2</td>
+                                        <td>$450</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Zen Retreat</td>
+                                        <td class="text">Four breakfasts, a trail map, a pass for daily yoga</td>
+                                        <td>4</td>
+                                        <td>$600</td>
+                                    </tr>
+                                    <tr>
+                                        <td>Kayak Away</td>
+                                        <td class="text">Two breakfasts, two hours of kayak rental daily, a trail map</td>
+                                        <td>2</td>
+                                        <td>$500</td>
+                                    </tr>
+                            </table>
                         </main>
-                </main>
                 <footer>
                     <small>
                         <i>
